Logistics - v12 - dev branch - logic added and updated
